--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ body
 	margin: 0;
 	padding: 0;
 	background-image: url(pic1.jpg);
-	background-size: cover;
+	background-size:auto;
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
